--- a/app/src/main/res/layout/content_filtered_shelters.xml
+++ b/app/src/main/res/layout/content_filtered_shelters.xml
@@ -10,14 +10,16 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/filtered_recycler"
-        android:layout_width="367dp"
-        android:layout_height="495dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="2dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="2dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:scrollbars="vertical">
+    </android.support.v7.widget.RecyclerView>
 </android.support.constraint.ConstraintLayout>
