--- a/app/src/main/res/layout/filtered_recycler_layout.xml
+++ b/app/src/main/res/layout/filtered_recycler_layout.xml
@@ -4,14 +4,13 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
-
     <TextView
-        android:id="@+id/shelter_list_item"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:id="@+id/filtered_recycler_item"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:text="TextView"
         android:paddingBottom="8dp"
         android:paddingTop="8dp"
-        android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 </LinearLayout>
