--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -4,7 +4,10 @@
 
     To get one, follow this link, follow the directions and press "Create" at the end:
 
-    https://console.developers.google.com/flows/enableapi?apiid=maps_android_backend&keyType=CLIENT_SIDE_ANDROID&r=AC:1E:46:7C:87:31:A7:4F:C2:F3:4E:F0:0A:51:67:D3:B4:68:9D:9A%3Bedu.gatech.cs2340.hkskh.Shelters.Controllers
+    https://console.developers.google.com/flows/enableapi?
+    apiid=maps_android_backend&keyType=CLIENT_SIDE_ANDROID
+    &r=AC:1E:46:7C:87:31:A7:4F:C2:F3:4E:F0:0A:51:67:D3:B4:68:9D:9A%3Bedu
+    .gatech.cs2340.hkskh.Shelters.Controllers
 
     You can also add your credentials to an existing key, using these values:
 
@@ -20,5 +23,6 @@
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCRxeXbjVEOipug2cJHZ6DOaklgwZKud5U</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve"
+        translatable="false">AIzaSyCRxeXbjVEOipug2cJHZ6DOaklgwZKud5U</string>
 </resources>
