--- a/app/src/main/res/layout/content_shelter_list.xml
+++ b/app/src/main/res/layout/content_shelter_list.xml
@@ -9,7 +9,9 @@
         android:id="@+id/shelter_list_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="10dp"
         android:layout_marginRight="10dp"
+        android:layout_marginStart="4dp"
         android:layout_marginLeft="4dp"
         android:layout_weight="1"
         android:text="TextView"
