--- a/app/src/main/res/layout/content_shelter_list.xml
+++ b/app/src/main/res/layout/content_shelter_list.xml
@@ -2,6 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:paddingBottom="8dp"
+    android:paddingTop="8dp"
     android:orientation="horizontal">
 
 
@@ -9,11 +11,9 @@
         android:id="@+id/shelter_list_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginLeft="4dp"
-        android:layout_weight="1"
+        android:paddingLeft= "4dp"
+        android:paddingRight="10dp"
+        android:layout_weight="0"
         android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
@@ -22,8 +22,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:paddingBottom="8dp"
-        android:paddingTop="8dp"
         android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 </LinearLayout>
